orderableTables uses flexbox, programBubbles in own component, fix stretching
FYI @conceptualspace

--- a/src/manageProgramClientsDialog.styl
+++ b/src/manageProgramClientsDialog.styl
@@ -1,15 +1,18 @@
 .manageProgramClientsDialog
 	width 600px
-	min-height 400px
+	max-height 400px
 	display flex
+	overflow auto
 	
 	> div
 		flex 1
 		
 		&:first-child
 			margin-right 10px
+			overflow auto
 		&:last-child
 			margin-left 10px
+			overflow auto
 			
 		> .panel-heading .badge
 			float right
